[package]
name = "arrays"
version = "0.1.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "arrays"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
rusqlite = "0.16.0"
neon-serde = "0.1.1"
serde_rusqlite = "0.17"
serde_derive = "1.0.87"
serde = "1.0.87"